# wofostgym

./: .gitignore  LICENSE.md  README.md  gen_data.py  gen_data_multiple.py  pyproject.toml  requirements.txt  test_wofost.py  train_agent.py  utils.py  vis_data.py
bash_scripts/: barley_wk_dqn.sh  barley_wk_ppo.sh  barley_wk_sac.sh  gen_kristen_data.sh  gen_runoff_data.sh  jujube_default_dqn.sh  jujube_default_ppo.sh  jujube_default_sac.sh  jujube_fert_large_ppo.sh  jujube_threshold_wk_dqn.sh  jujube_threshold_wk_ppo.sh  jujube_threshold_wk_sac.sh  maize_ppo.sh  maize_threshold_wk_dqn.sh  maize_threshold_wk_ppo.sh  maize_threshold_wk_sac.sh  pear_threshold_wk_bc.sh  pear_threshold_wk_dqn.sh  pear_threshold_wk_gail.sh  pear_threshold_wk_ppo.sh  pear_threshold_wk_sac.sh  potato_limited_wk_dqn.sh  potato_limited_wk_ppo_1.sh  potato_limited_wk_ppo_2.sh  potato_limited_wk_ppo_3.sh  potato_limited_wk_ppo_4.sh  potato_limited_wk_sac.sh  sunflower_cost_dqn.sh  sunflower_cost_ppo.sh  sunflower_cost_sac.sh  sunflower_cost_single_dqn.sh  sunflower_cost_single_ppo.sh  sunflower_cost_single_sac.sh  sunflower_wk_dqn.sh  sunflower_wk_ppo.sh  sunflower_wk_sac.sh  wheat_default_dqn.sh  wheat_default_ppo.sh  wheat_default_sac.sh  wheat_fert_large_ppo.sh  (+11 more)
data/Jujube_Rand/: config.yaml
data/Jujube_Threshold_WK_Rand/: config.yaml
data/Maize_Rand/: config.yaml
data/Maize_Threshold_WK_Rand/: config.yaml
data/Pear_Threshold_WK_Rand/: config.yaml
env_config/: state_names.yaml  state_ranges.yaml  state_units.yaml
imitation/: LICENSE.md  pyproject.toml
imitation/imitation/algorithms/adversarial/: common.py
imitation/imitation/data/: buffer.py  rollout.py  wrappers.py
imitation/imitation/rewards/: reward_wrapper.py
pcse/: LICENSE.md  README.md  pyproject.toml
pcse_gym/: README.md  pyproject.toml
pcse_gym/pcse_gym/: __init__.py  args.py  policies.py  utils.py
pcse_gym/pcse_gym/envs/: __init__.py  harvest_annual.py  harvest_perennial.py  plant_annual.py  plant_perennial.py  render.py  wofost_annual.py  wofost_annual_multi_farm.py  wofost_base.py  wofost_grape.py  wofost_multi_farm.py  wofost_perennial.py
pcse_gym/pcse_gym/wrappers/: __init__.py  wrappers.py
rl_algs/: BC.py  BCQ.py  DQN.py  GAIL.py  PPO.py  SAC.py  rl_utils.py
(+339 files in other folders)
